--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <link href="css/style.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
+
+
+<div class="entire">
     <h2 id="date">0000년 00월 00일</h2>
     <h2 id="clock">00:00</h2>    
     <form id="login-form" class="hidden">
@@ -28,7 +31,7 @@
        <span></span>
        <span></span>
       </div>
-
+</div>
 
      
     
