add:clock-bouce, solve-change-24hour

--- a/index.html
+++ b/index.html
@@ -34,10 +34,16 @@
         class="time flex flex-col text-white items-center max-w-sm mx-auto bg-[rgba(0,0,0,0)] mt-[9.44px] hidden font-sans sm:max-w-full sm:absolute sm:top-[30%] sm:font-bold sm:w-full"
       >
         <!--       <h2 class="mx-auto text-blue-400" id="date">0000년 00월 00일</h2> -->
-        <h2 class="mx-auto text-6xl font-normal sm:text-[168px]" id="clock">
+        <h2
+          class="mx-auto text-6xl font-normal z-30 sm:text-[168px]"
+          id="clock"
+        >
           00:00
         </h2>
-        <h2 class="mx-auto text-6xl font-normal hidden" id="clock12">
+        <h2
+          class="mx-auto animation-spin text-6xl font-normal z-30 sm:text-[168px] hidden"
+          id="clock12"
+        >
           00:00
         </h2>
 
