--- a/index.html
+++ b/index.html
@@ -18,17 +18,32 @@
   </head>
 
   <body
-    class="select-none h-screen flex flex-col bg-no-repeat bg-cover bg-center"
+    class="select-none h-screen min-w-sm flex flex-col bg-no-repeat bg-cover bg-center"
   >
-    <div class="w-full h-1/6 flex items-center">
+    <div
+      class="min-w-sm w-full h-1/6 flex items-center justify-center relative"
+    >
       <img
         id="logo"
         src="img/logo-white.svg"
         class="h-[35%] slelect-none sm:h-1/2 w-auto mb-10 mx-auto"
       />
+      <div
+        id="weather"
+        class="hidden absolute top-4 right-4 text-white flex flex-col"
+      >
+        <div>
+          <span
+            class="p-1 w-auto bg-gray-600 rounded-full border border-white"
+          ></span>
+          <span class="text-2xl"></span>
+        </div>
+
+        <span id="city" class="text-center"></span>
+      </div>
     </div>
 
-    <div class="flex flex-col items-center w-full h-3/5 relative">
+    <div class="min-w-sm flex flex-col items-center w-full h-3/5 relative">
       <div
         id="clock-box"
         class="time flex flex-col text-white items-center max-w-sm mx-auto bg-[rgba(0,0,0,0)] mt-[9.44px] hidden font-sans sm:max-w-full sm:absolute sm:top-[30%] sm:font-bold sm:w-full"
@@ -148,7 +163,7 @@
     </div>
 
     <div
-      class="w-full h-1/5 relative flex flex-col item-center justify-around p-8"
+      class="min-w-sm w-full h-1/5 relative flex flex-col item-center justify-around p-8"
     >
       <div
         id="quote"
@@ -201,5 +216,6 @@
     <script src="js/background.js"></script>
     <script src="js/todo.js"></script>
     <script src="js/mainfocus.js"></script>
+    <script src="js/weather.js"></script>
   </body>
 </html>
